# Hydrodrivers

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  hydrv.mk  hydrv_clock.c  hydrv_gpio.h  hydrv_uart.c  hydrv_uart.h
.cache/clangd/index/: cmsis_compiler.h.1A62499061498B1D.idx  cmsis_gcc.h.AECE5E8F5FD45599.idx  cmsis_version.h.837DA2EC682C438F.idx  core_cm4.h.8D25FE153B52414E.idx  hydrolib_common.h.CC2417A68E4D804E.idx  hydrolib_cstring.hpp.0E466C00A90F047C.idx  hydrolib_formatable_string.hpp.92C5A65E80F9BF71.idx  hydrolib_func_concepts.hpp.B05310180325A298.idx  hydrolib_log.hpp.655135022EDCD5AE.idx  hydrolib_logger.cpp.E9C625A2EA6C8318.idx  hydrolib_logger.hpp.56D235F780F61675.idx  hydrolib_stream_concepts.hpp.45CA3C533E283FC0.idx  hydrv_clock.c.D80C128C6C968909.idx  hydrv_clock.h.1AC8ADCF0CD548F5.idx  hydrv_clock.hpp.8F07671FAC7A2DE5.idx  hydrv_common.h.E7D525B519BCA959.idx  hydrv_gpio_low.cpp.65E95C8667DB3EED.idx  hydrv_gpio_low.hpp.21AA86DCD95A539C.idx  hydrv_uart.hpp.C333DD67B205D40B.idx  hydrv_uart_low.hpp.410940F0EE53753E.idx  main.cpp.14A47EBAA98E7C4D.idx  main.cpp.982F9C8709E42EA2.idx  mpu_armv7.h.2FEF37122AD0D4AE.idx  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: building_testing.yml  docker_building.yml
CMSIS/: CMakeLists.txt
deprecated/hydrv_uart_deprecated/: CMakeLists.txt
hydrv_bus/: CMakeLists.txt  hydrolib_bus_class_diagram.puml
hydrv_bus/example/: CMakeLists.txt
hydrv_bus/example/src/: main.cpp
hydrv_bus/include/: hydrv_slave.hpp
hydrv_clock/: CMakeLists.txt
hydrv_clock/f1/include/: hydrv_clock.hpp
hydrv_clock/f4/include/: hydrv_clock.hpp
hydrv_clock/include/: hydrv_clock.hpp  hydrv_clock_low.hpp
hydrv_clock/upper_half/src/: hydrv_time.cpp
hydrv_clock_deprecated/: CMakeLists.txt
hydrv_clock_deprecated/include/: hydrv_clock.h
hydrv_clock_deprecated/src/: hydrv_clock.c
hydrv_common/: CMakeLists.txt
hydrv_common/include/: hydrv_common.h
hydrv_dma/: CMakeLists.txt
hydrv_dma/example/: example.cmake
hydrv_dma/example/src/: main.cpp  stm32f4xx_it.c
hydrv_dma/include/: hydrv_dma.hpp
hydrv_dw1000/lower_half/: CMakeLists.txt
hydrv_dw1000/lower_half/example/: CMakeLists.txt
hydrv_dw1000/lower_half/example/src/: main.cpp
hydrv_dw1000/lower_half/include/: hydrv_dw1000_low.hpp  hydrv_dw1000_regs.hpp
hydrv_gpio/: CMakeLists.txt
hydrv_gpio/example/: CMakeLists.txt  example.cmake
hydrv_gpio/example/include/: main.h
hydrv_gpio/example/src/: main.cpp  stm32f4xx_it.c
hydrv_gpio/f1/include/: hydrv_gpio_low.hpp
hydrv_gpio/f4/include/: hydrv_gpio_low.hpp
hydrv_gpio/include/: hydrv_gpio_low.hpp
hydrv_gpio/src/: hydrv_gpio.c  hydrv_gpio_low.cpp
hydrv_gpio_deprecated/include/: hydrv_gpio.h
hydrv_i2c/: CMakeLists.txt
hydrv_i2c/example/: CMakeLists.txt
hydrv_i2c/example/src/: main.cpp
hydrv_i2c/lower_half/: CMakeLists.txt
hydrv_i2c/lower_half/f4/include/: hydrv_i2c_low.hpp
hydrv_i2c/upper_half/: CMakeLists.txt
hydrv_i2c/upper_half/include/: hydrv_i2c.hpp
hydrv_icm42688/: CMakeLists.txt
hydrv_icm42688/example/: CMakeLists.txt
hydrv_icm42688/example/src/: main.cpp
hydrv_icm42688/include/: hydrv_icm42688.hpp
hydrv_serial_protocol/: CMakeLists.txt
hydrv_serial_protocol/example/: example.cmake
hydrv_serial_protocol/example/include/: main.h
hydrv_serial_protocol/example/src/: main.cpp  stm32f4xx_it.c
hydrv_serial_protocol/include/: hydrv_serial_protocol.hpp
hydrv_serial_protocol/src/: hydrv_serial_protocol.cpp
hydrv_shell/: CMakeLists.txt
hydrv_shell/example/: CMakeLists.txt
hydrv_shell/example/src/: main.cpp
hydrv_shell/include/: hydrv_shell_uart.hpp
hydrv_spi/: CMakeLists.txt
hydrv_spi/example/: CMakeLists.txt
hydrv_spi/example/src/: main.cpp
hydrv_spi/lower_half/: CMakeLists.txt
hydrv_spi/lower_half/f1/include/: hydrv_spi_low.hpp
hydrv_spi/lower_half/f4/include/: hydrv_spi_low.hpp
hydrv_spi/upper_half/: CMakeLists.txt
hydrv_spi/upper_half/include/: hydrv_spi.hpp
hydrv_thruster/: CMakeLists.txt
hydrv_thruster/example/: CMakeLists.txt  example.cmake
hydrv_thruster/example/include/: main.h
hydrv_thruster/example/src/: example.cmake  main.cpp  stm32f4xx_it.c
hydrv_thruster/include/: hydrv_thruster.hpp  hydrv_thrusters_control.hpp
hydrv_tim/: CMakeLists.txt
hydrv_tim/example/: CMakeLists.txt  example.cmake
hydrv_tim/example/src/: main.cpp
hydrv_tim/lower_half/: CMakeLists.txt
hydrv_tim/lower_half/include/: hydrv_tim_low.hpp
hydrv_uart/: CMakeLists.txt
hydrv_uart/dma/: example.cmake
hydrv_uart/example/: CMakeLists.txt  example.cmake
hydrv_uart/example/include/: main.h
hydrv_uart/example/src/: main.cpp  main_rs485.cpp  stm32f4xx_it.c
hydrv_uart/include/: hydrv_uart.h  hydrv_uart.hpp
hydrv_uart/lower_half/: CMakeLists.txt
hydrv_uart/lower_half/f1/include/: hydrv_uart_low.hpp
hydrv_uart/lower_half/f4/include/: hydrv_uart_low.hpp
hydrv_uart/lower_half/include/: hydrv_uart_low.hpp
hydrv_uart/lower_half/mock/: CMakeLists.txt
hydrv_uart/lower_half/mock/include/: hydrv_uart_low.hpp
hydrv_uart/src/: hydrv_uart.c  hydrv_uart.cpp
hydrv_uart/src/lower_half/: hydrv_uart_low.hpp
hydrv_uart/tests/: test_uart.cpp
hydrv_uart/tests/lower_half_mock/: hydrv_uart_low.hpp
hydrv_uart/upper_half/: CMakeLists.txt
hydrv_uart/upper_half/include/: hydrv_rs_485.hpp  hydrv_uart.hpp
hydrv_uart/upper_half/tests/: CMakeLists.txt  test_uart.cpp
hydrv_uart_deprecated/: CMakeLists.txt
hydrv_uart_deprecated/include/: hydrv_uart.h
hydrv_uart_deprecated/src/: hydrv_uart.c
hydrv_vectornav/: CMakeLists.txt
hydrv_vectornav/example/: CMakeLists.txt  example.cmake
hydrv_vectornav/example/src/: main.cpp  stm32f4xx_it.c
hydrv_vectornav/include/: hydrv_vectornav.hpp
include/: hydrv_common.h  hydrv_gpio.h
libs/CMSIS/: CMakeLists.txt
renode/: README.md
renode/f1/: gpio_F1.resc  uart_F1.resc
renode/f4/: bus_F4.resc  gpio_F4.resc  uart_F4.resc
resources/: STM32F407.svd  gcc-arm-none-eabi-f1.cmake  gcc-arm-none-eabi-f4.cmake  gcc-arm-none-eabi.cmake
src/: hydrv_gpio.c
(+7 files in other folders)
