cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_library(HydrodriversThruster INTERFACE)
add_subdirectory(example)

target_link_libraries(HydrodriversThruster INTERFACE HydrolibCommon)
target_link_libraries(HydrodriversThruster INTERFACE HydrodriversGPIO)
target_link_libraries(HydrodriversThruster INTERFACE HydrodriversTimerLow)
target_link_libraries(HydrodriversThruster INTERFACE CMSIS)

target_include_directories(HydrodriversThruster INTERFACE include)
