set(LIBRARY_NAME HydrodriversI2C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

if(MCU_FAMILY STREQUAL "F4")
    add_library(${LIBRARY_NAME} INTERFACE)
    
    target_link_libraries(${LIBRARY_NAME} INTERFACE HydrodriversI2CLow)
    target_link_libraries(${LIBRARY_NAME} INTERFACE HydrolibConcepts)
    target_link_libraries(${LIBRARY_NAME} INTERFACE HydrodriversGPIO)
    
    target_include_directories(${LIBRARY_NAME} INTERFACE include)

    message(STATUS "${LIBRARY_NAME} target added for MCU_FAMILY: ${MCU_FAMILY}")
else()
    message(WARNING "${LIBRARY_NAME} target is not supported for MCU_FAMILY: ${MCU_FAMILY}")
endif()
